[Java] Fix deprecation on JDK 20.